--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:dashboard="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -7,6 +8,11 @@
     <com.jacob.dashboard.MeasureDashBoard
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        dashboard:main_textSize="50sp"
+        dashboard:maxValue="60"
+        dashboard:minValue="20"
+        dashboard:radius_dashboard="125dp"
+        dashboard:radius_slider="12dp"/>
 
 </RelativeLayout>
